[package]
name = "pin_logger"
version = "0.1.0"
edition = "2024"

[features]
build = ["dep:cargo_metadata", "dep:syn", "dep:walkdir"]

[dependencies]
critical-section = "1.2.0"
embedded-hal = "1.0.0"
log = "0.4.32"
cargo_metadata = { version = "0.23.1", optional = true }
syn = { version = "2.0.118", optional = true }
walkdir = { version = "2.5.0", optional = true }
