[package]
name = "pin-logger"
version = "0.1.0"
edition = "2024"
categories = ["embedded", "no-std", "profiling", "debugging"]
keywords = ["power", "ppk2", "profiling", "logging"]
# Opting for the same licenses as embedded-hal
license = "MIT OR Apache-2.0"
description = "no-std embedded-hal logging, but with digital output pins"
readme = "README.md"

[features]
build = ["dep:cargo_metadata", "dep:proc-macro2", "dep:syn", "dep:walkdir"]

[dependencies]
critical-section = "1.2.0"
embedded-hal = "1.0.0"
log = "0.4.32"
cargo_metadata = { version = "0.23.1", optional = true }
proc-macro2 = { version = "1.0.106", features = ["span-locations"], optional = true }
syn = { version = "2.0.118", features = ["visit", "full"], optional = true }
walkdir = { version = "2.5.0", optional = true }
